volexc/tests/ui/lex_invalid_token.vol
// Invalid token: @ symbol
struct Foo {
    @field: u32
}
